# CorsixTH

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .luacheckrc  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.txt  CorsixTH.sln  Dockerfile.build  Dockerfile.web  FindLua51.cmake  LICENSE  LICENSE.txt  README  README-remise.md  README.md  README.txt  appveyor.yml  azure-pipelines.yml  build.sh  changelog.txt  check-for-updates  check_master  default.nix  docker-compose.yml  edit_room.lua  index.html  run_to_initialize_on_ubuntu.sh  run_travis  vcpkg-configuration.json  vcpkg.json  web.nix
AnimView/: AnimView.rc  AnimView.vcproj  CMakeLists.txt  Icon.icns  Makefile  app.cpp  app.h  backdrop.h  config.h.in  frmMain.cpp  frmMain.h  frmSprites.cpp  frmSprites.h  rnc.cpp  th.cpp  th.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
CorsixTH/: CMakeLists.txt  CorsixTH.aps  CorsixTH.deproj  CorsixTH.lua  CorsixTH.rc  CorsixTH.vcproj  CorsixTH.vcxproj.user.in  Icon.icns  LICENSE.txt  Makefile  README.txt  RequiredResources.txt  changelog.txt  com.corsixth.CorsixTH.appdata.xml  com.corsixth.corsixth.appdata.xml  com.corsixth.corsixth.desktop  com.corsixth.corsixth.metainfo.xml  com.github.CorsixTH.CorsixTH.appdata.xml  config.sample.txt  config.txt  corsix-th.6  corsix-th.desktop  resource.h  run-corsix-th-dev.sh.in  run-corsix-th-dev.sh.in.apple  run-corsixth-dev.sh.in
CorsixTH/AI/: AIreference.txt  ai.lua
CorsixTH/Bitmap/: aux_ui.spec  aux_ui.tab  example.spec  lib_bmp.lua  lib_spritesheet.lua  lose.pl8  main_menu.spec  main_menu.tab  mainmenu1024.pal  mainmenu1080.pal  mainmenu1280.pal  mainmenu1440.pal  mainmenu1680.pal  mainmenu1920.pal  mainmenu640.pal  mainmenu800.pal  mkbootstrap.lua  mkfont.lua  mkraw.lua  mksheet.lua  readme.txt  tree_ctrl.spec  tree_ctrl.tab  winlevel.pl8
CorsixTH/Campaigns/: ChrizmanTV.campaign  Coffalot.map  Dethsdaw.map  Four Corners.map  Greyham Gardens.map  Holby.map  Hoppalong.map  Royal Hospital.map  Snuffit Sands.map  Tufflook.map  Upper Pukington.map  Wishinwell.map  Writhe.map  coffalot.level  dethsdaw.level  example.campaign  fourcorners.level  greyhamgardens.level  holby.level  hoppalong.level  royalhospital.level  snuffitsands.level  tufflook.level  upperpukington.level  wishinwell.level  writhe.level
CorsixTH/CppTest/: CMakeLists.txt  CMakeLists.txt.in  example.cpp  example_test.cpp  spriteTest.cpp  test_main.cpp  test_th_lua.cpp  test_th_lua_map.cpp  test_th_lua_ui.cpp  test_th_strings.cpp  th_gfx_test.cpp
CorsixTH/Documents/Humbe/: anims_current_impl.adoc  behaviour.adoc  features.adoc
CorsixTH/Graphics/: file_mapping.txt
CorsixTH/Humbe/Docs/: features.adoc
CorsixTH/Levels/: Example.map  avatar.level  beta_confined_v5.level  confined_v5.level  confined_v5.map  demo.level  example.level  finisham.level  finisham.map  original05.level  original07.level  original08.level  original11.level  original12.level  st.peter's.level  st.peter's.map
CorsixTH/Lua/: HeatingController.lua  action.lua  animation_loader.lua  announcer.lua  api_version.lua  app.lua  audio.lua  base_config.lua  calls_dispatcher.lua  cheats.lua  class.lua  command.lua  command_stack.lua  config_finder.lua  date.lua  debug_script.lua  earthquake.lua  endconditions.lua  entity.lua  entity_map.lua  epidemic.lua  filesystem.lua  game_ui.lua  graphics.lua  hospital.lua  humanoid.lua  humanoid_action.lua  key_mapping.txt  map.lua  movie_player.lua  object.lua  parse_lang.lua  patient.lua  persistance.lua  pos_size.lua  queue.lua  research_department.lua  room.lua  run_debugger.lua  sprite_viewer.lua  (+10 more)
CorsixTH/Lua/ai/: aihospital.lua  aipatient.lua
CorsixTH/Lua/commands/: compound.lua  set_map_cell.lua  set_map_cell_flags.lua
CorsixTH/Lua/diagnosis/: diag_blood_machine.lua  diag_cardiogram.lua  diag_general_diag.lua  diag_gp.lua  diag_psych.lua  diag_scanner.lua  diag_ultrascan.lua  diag_ward.lua  diag_x_ray.lua
CorsixTH/Lua/dialogs/: adviser.lua  annual_report.lua  bank_manager.lua  bottom_panel.lua  build_room.lua  calls_dispatcher.lua  cheats.lua  confirm_dialog.lua  custom_game.lua  directory_browser.lua  drug_casebook.lua  edit_room.lua  error_confirm.lua  fatal_error.lua  fax.lua  file_browser.lua  fullscreen.lua  furnish_corridor.lua  graphs.lua  hire_staff.lua  hospital_policy.lua  information.lua  jukebox.lua  load_game.lua  lua_console.lua  machine_dialog.lua  main_menu.lua  make_debug_patient.lua  map_editor.lua  menu.lua  menu_list_dialog.lua  message.lua  move_room.lua  new_game.lua  (+17 more)
CorsixTH/Luatest/: .busted  README.txt  TH.lua  class_test_base.lua  corsixth.lua  logger.lua  non_strict.lua
CorsixTH/SDLMain/: CMakeLists.txt
CorsixTH/Src/: CMakeLists.txt  SDL_main_win32.c  bootstrap.cpp  bootstrap.h  config.h  config.h.in  cp437_table.h  cp936_table.h  cpmik_table.h  dx9_video.cpp  iso_fs.cpp  iso_fs.h  jit_opt.h  lua.hpp  lua_lfs.c  lua_lfs.h  lua_logger.cpp  lua_logger.h  lua_rnc.cpp  lua_rnc.h  lua_sdl.h  main.cpp  main.h  midi_player.cpp  midi_player.h  ogl_video.cpp  persist_lua.cpp  persist_lua.h  random.c  rnc.cpp  run_length_encoder.cpp  run_length_encoder.h  sdl_audio.cpp  sdl_core.cpp  sdl_core.h  sdl_video.cpp  sdl_wm.cpp  singleton.h  sprite.cpp  sprite.h  (+41 more)
CorsixTH/SrcUnshared/: CMakeLists.txt  SDL_main_win32.c  main.cpp
CorsixTH/inc/: bootstrap.h  config.h.in  cp437_table.h  cp936_table.h  jit_opt.h  lua.hpp  lua_sdl.h  main.h  persist_lua.h  rnc.h  th.h  th_gfx_font.h  th_gfx_sdl.h  th_map_overlays.h  th_movie.h  th_pathfind.h  xmi2mid.h
CorsixTH/x64/: CorsixTH.lua
MapEdit/: CMakeLists.txt  FindwxWidgets_svn.cmake  Icon.icns  MapEdit.rc  MapEdit.vcproj  RequiredResources.txt
MapEdit/Src/: app.cpp  app.h  block_gallery.cpp  block_gallery.h  embedded_game.cpp  embedded_game.h  frmLog.cpp  frmLog.h  frmMain.cpp  frmMain.h  game.h  scrollable_game.cpp  scrollable_game.h  th_map_wrapper.cpp  th_map_wrapper.h
libs/rnc/: CMakeLists.txt  rnc.cpp  rnc.h  rnc_decode_cli.cpp
tools/rnc/: CMakeLists.txt  rnc_decode_cli.cpp
(+2114 files in other folders)
